# qimg

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  TODO  env.sh
.idx/: dev.nix
src/: color.cxx  color.hpp  color.rs  flag.rs  img.hpp  libqimg.cxx  libqimg.hxx  main.rs  sharpen.cxx  sharpen.hpp
